<resources>
    <string name="nome">Nome</string>
    <string name="horario">Horário</string>
    <string name="descricao">Descrição</string>
    <string name="tvAtividade">Atividade</string>
    <string name="tvPesquisar">Pesquisar</string>
    <string name="btAdm">Administrador</string>
    <string name="btAluno">Aluno</string>
    <string name="descriptionImage">Logo da UFRPE</string>
    <string name="tvFavoritos">Favoritos</string>
    <string name="titulo">Título</string>
    <string name="local">Local</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="registro_sucesso">Atividade cadastrada com sucesso!</string>
    <string name="cursos">Cursos</string>
    <string name="outros">Outros</string>
    <string name="esportes">Esportes</string>
    <string name="idiomas">Idiomas</string>
    <string name="todos">Todos</string>
    <string name="home">Principal</string>
    <string name="detalhes">Detalhes</string>
    <string name="favoritar">Favoritar</string>
    <string name="app_name">O que rola na UFRPE?</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cadastrar_pergunta">Ainda não tem uma conta?</string>
    <string name="login_title">Entrar</string>
    <string name="criar_conta">Criar uma nova conta</string>
    <string name="cadastrar_conta">Cadastrar</string>
    <string name="login_pergunta">Já possui uma conta?</string>
    <string name="entrar_conta">Entrar com sua conta</string>
    <string name="campus">Campus</string>
    <string name="curso">Curso</string>
    <string name="usuario_criado">Usuário criado com sucesso!</string>
    <string name="senha_pequena">A senha deve ter no mínimo 6 caracteres</string>
    <string name="email_cadastrado">O email informado já está em uso</string>
    <string name="email_nao_cadastrado">Esse email não foi cadastrado</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="logado_sucesso">Entrando...</string>
    <string name="tipo">Tipo</string>
    <string name="logout">Sair</string>
    <string name="minhas_atividades">Minhas Atividades</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="favoritos_sucesso">Atividade adicionada aos favoritos com sucesso</string>
    <string name="favorito_ja_existe">Não possível favoritar, o item já consta em sua lista de favoritos.</string>
    <string name="desfavoritar">Desfavoritar</string>
</resources>
