<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btDetalhes"
        android:layout_marginStart="16dp"
        android:text="@string/titulo" />

    <TextView
        android:id="@+id/tvHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/horario" />

    <Button
        android:id="@+id/btDetalhes"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/tvHorario"
        android:text="@string/detalhes"
        android:textAlignment="center"
        android:textSize="8sp" />
</RelativeLayout>